--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <span class="icon-room text-primary"></span>
               </div>
               <div class="text">
-                <span class="h4 d-block">San Francisco</span>
-                <span class="caption-text">Mountain View, Fake st., CA</span>
+                <span class="h4 d-block">Guayaquil</span>
+                <span class="caption-text">Durán, Guayas, Ecuador</span>
               </div>
             </div>
 
@@ -86,8 +86,8 @@
                 <span class="icon-phone text-primary"></span>
               </div>
               <div class="text">
-                <span class="h4 d-block">+1 2094 392 4312</span>
-                <span class="caption-text">Call us</span>
+                <span class="h4 d-block">+593969608089</span>
+                <span class="caption-text">Whatsapp</span>
               </div>
             </div>
           </div>
@@ -98,8 +98,8 @@
                 <span class="icon-envelope text-primary"></span>
               </div>
               <div class="text">
-                <span class="h4 d-block">info@gmail.com</span>
-                <span class="caption-text">Email us</span>
+                <span class="h4 d-block">ciudaddedios@gmail.com</span>
+                <span class="caption-text">Correo-electronico</span>
               </div>
             </div>
           </div>
