--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
               <div class="text">
                 <span class="h4 d-block">ciudaddedios@gmail.com</span>
-                <span class="caption-text">Correo-electronico</span>
+                <span class="caption-text">Correo electrónico</span>
               </div>
             </div>
           </div>
