Nav bar/Menus en->es

--- a/blog-single.html
+++ b/blog-single.html
@@ -40,7 +40,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Agriculture Free Bootstrap Template by Untree.co</title>
+  <title>Finca Ciudad de Dios - Blog Single</title>
 
 </head>
 
@@ -122,20 +122,20 @@
                 <nav class="site-navigation position-relative text-right" role="navigation">
                   <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
                     <li>
-                      <a href="index.html" class="nav-link text-left">Home</a>
+                      <a href="index.html" class="nav-link text-left">Inicio</a>
                     </li>
                     <li>
-                      <a href="about.html" class="nav-link text-left">About Us</a>
+                      <a href="about.html" class="nav-link text-left">Nosotros</a>
                     </li>
                     <li>
-                      <a href="services.html" class="nav-link text-left">Our Services</a>
+                      <a href="services.html" class="nav-link text-left">Servicios</a>
                     </li>
                     <li>
                       <a href="testimonials.html" class="nav-link text-left">Testimonials</a>
                     </li>
                     <li class="active"><a href="blog.html" class="nav-link text-left">Blog</a></li>
                     <li>
-                      <a href="contact.html" class="nav-link text-left">Contact</a>
+                      <a href="contact.html" class="nav-link text-left">Contacto</a>
                     </li>
                   </ul>                                                                                                                                                                                                                                                                                          
                 </nav>
@@ -156,7 +156,7 @@
             <div class="col-lg-12 mt-5" data-aos="fade-up">
               <h1>Blog Single Post</h1>
               <p class="text-white text-center">
-                <a href="index.html">Home</a>
+                <a href="index.html">Inicio</a>
                 <span class="mx-2">/</span>
                 <span>Blog Single</span>
               </p>
@@ -365,7 +365,7 @@
             <div class="col-lg-3">
               <h3 class="footer-heading"><span>Our Company</span></h3>
               <ul class="list-unstyled">
-                <li><a href="#">About</a></li>
+                <li><a href="#">Nosotros</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Our Team</a></li>
@@ -374,7 +374,7 @@
               </ul>
             </div>
             <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Our Services</span></h3>
+              <h3 class="footer-heading"><span>Servicios</span></h3>
               <ul class="list-unstyled">
                 <li><a href="#">Mulching</a></li>
                 <li><a href="#">Plowing</a></li>
@@ -384,7 +384,7 @@
               </ul>
             </div>
             <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Contact</span></h3>
+              <h3 class="footer-heading"><span>Contacto</span></h3>
               <ul class="list-unstyled">
                 <li><a href="#">Help Center</a></li>
                 <li><a href="#">Support Community</a></li>
