--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Agriculture Free Bootstrap Template by Untree.co</title>
+  <title>Finca Ciudad de Dios - Contacto</title>
 
 </head>
 
@@ -122,20 +122,20 @@
                 <nav class="site-navigation position-relative text-right" role="navigation">
                   <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
                     <li>
-                      <a href="index.html" class="nav-link text-left">Home</a>
+                      <a href="index.html" class="nav-link text-left">Inicio</a>
                     </li>
                     <li>
-                      <a href="about.html" class="nav-link text-left">About Us</a>
+                      <a href="about.html" class="nav-link text-left">Nosotros</a>
                     </li>
                     <li>
-                      <a href="services.html" class="nav-link text-left">Our Services</a>
+                      <a href="services.html" class="nav-link text-left">Servicios</a>
                     </li>
                     <li>
                       <a href="testimonials.html" class="nav-link text-left">Testimonials</a>
                     </li>
                     <li><a href="blog.html" class="nav-link text-left">Blog</a></li>
                     <li class="active">
-                      <a href="contact.html" class="nav-link text-left">Contact</a>
+                      <a href="contact.html" class="nav-link text-left">Contacto</a>
                     </li>
                   </ul>                                                                                                                                                                                                                                                                                          
                 </nav>
@@ -154,11 +154,11 @@
         <div class="container">
           <div class="row align-items-center text-center">
             <div class="col-lg-12 mt-5" data-aos="fade-up">
-              <h1>Contact Us</h1>
+              <h1>Contacto</h1>
               <p class="text-white text-center">
-                <a href="index.html">Home</a>
+                <a href="index.html">Inicio</a>
                 <span class="mx-2">/</span>
-                <span>Contact</span>
+                <span>Contacto</span>
               </p>
             </div>
           </div>
@@ -265,7 +265,7 @@
             <div class="col-lg-3">
               <h3 class="footer-heading"><span>Our Company</span></h3>
               <ul class="list-unstyled">
-                <li><a href="#">About</a></li>
+                <li><a href="#">Nosotros</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Our Team</a></li>
@@ -274,7 +274,7 @@
               </ul>
             </div>
             <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Our Services</span></h3>
+              <h3 class="footer-heading"><span>Servicios</span></h3>
               <ul class="list-unstyled">
                 <li><a href="#">Mulching</a></li>
                 <li><a href="#">Plowing</a></li>
@@ -284,7 +284,7 @@
               </ul>
             </div>
             <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Contact</span></h3>
+              <h3 class="footer-heading"><span>Contacto</span></h3>
               <ul class="list-unstyled">
                 <li><a href="#">Help Center</a></li>
                 <li><a href="#">Support Community</a></li>
