--- a/blog-single.html
+++ b/blog-single.html
@@ -131,7 +131,7 @@
                       <a href="services.html" class="nav-link text-left">Servicios</a>
                     </li>
                     <li>
-                      <a href="testimonials.html" class="nav-link text-left">Testimonials</a>
+                      <a href="testimonials.html" class="nav-link text-left">Testimonios</a>
                     </li>
                     <li class="active"><a href="blog.html" class="nav-link text-left">Blog</a></li>
                     <li>
