--- a/services.html
+++ b/services.html
@@ -131,7 +131,7 @@
                       <a href="services.html" class="nav-link text-left">Servicios</a>
                     </li>
                     <li>
-                      <a href="testimonials.html" class="nav-link text-left">Testimonials</a>
+                      <a href="testimonials.html" class="nav-link text-left">Testimonios</a>
                     </li>
                     <li><a href="blog.html" class="nav-link text-left">Blog</a></li>
                     <li>
@@ -329,7 +329,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12 mb-5 text-center">
-              <h3 class="section-subtitle">Testimonial</h3>
+              <h3 class="section-subtitle">Testimonios</h3>
               <h2 class="section-title text-black mb-4">What Clients Say...</h2>
             </div>
           </div>
