--- a/testimonials.html
+++ b/testimonials.html
@@ -40,7 +40,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Finca Ciudad de Dios - Testimoniales</title>
+  <title>Finca Ciudad de Dios - Testimonios</title>
 
 </head>
 
@@ -131,7 +131,7 @@
                       <a href="services.html" class="nav-link text-left">Servicios</a>
                     </li>
                     <li class="active">
-                      <a href="testimonials.html" class="nav-link text-left">Testimonials</a>
+                      <a href="testimonials.html" class="nav-link text-left">Testimonios</a>
                     </li>
                     <li><a href="blog.html" class="nav-link text-left">Blog</a></li>
                     <li>
@@ -154,11 +154,11 @@
         <div class="container">
           <div class="row align-items-center text-center border">
             <div class="col-lg-12 mt-5" data-aos="fade-up">
-              <h1>Testimonials</h1>
+              <h1>Testimonios</h1>
               <p class="text-white text-center">
                 <a href="index.html">Inicio</a>
                 <span class="mx-2">/</span>
-                <span>Testimonials</span>
+                <span>Testimonios</span>
               </p>
             </div>
           </div>
