--- a/index.html
+++ b/index.html
@@ -339,30 +339,30 @@
                 <img src="images/img_long_5.jpg" alt="Image " class="img-fluid img-overlap">
               </div>
               <div class="col-lg-5 ml-auto">
-                <h3 class="section-subtitle text-white opacity-50">Why Choose Us</h3>
-                <h2 class="section-title mb-4">More than <strong>50 year experience</strong> in agriculture industry</h2>
-                <p class="opacity-50">Reprehenderit, odio laboriosam? Blanditiis quae ullam quasi illum minima nostrum perspiciatis error consequatur sit nulla.</p>
+                <h3 class="section-subtitle text-white opacity-50">Por Qué Elegirnos</h3>
+                <h2 class="section-title mb-4">Más de <strong>15 años de experiencia</strong> en la industria agrícola.</h2>
+                <p class="opacity-50">Somos líderes en ofrecer productos de calidad y servicios excepcionales. Nuestro compromiso con la excelencia y la innovación nos distingue.</p>
 
                 <div class="row my-5">
                   <div class="col-lg-12 d-flex align-items-start mb-4">
                     <span class="icon-leaf mr-4 display-4"></span>
                     <div>
-                      <h4 class="m-0 h5 text-white">Always Fresh Foods</h4>
-                      <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
+                      <h4 class="m-0 h5 text-white">Alimentos Siempre Frescos</h4>
+                      <p class="text-white opacity-50">Ofrecemos alimentos frescos y deliciosos, directamente del campo a su mesa.</p>
                     </div>
                   </div>
                   <div class="col-lg-12 d-flex align-items-start mb-4">
                     <span class="icon-lemon-o mr-4 display-4"></span>
                     <div>
-                      <h4 class="m-0 h5 text-white">Organic Foods</h4>
-                      <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
+                      <h4 class="m-0 h5 text-white">Alimentos Orgánicos</h4>
+                      <p class="text-white opacity-50">Valoramos la salud y el bienestar. Ofrecemos una amplia variedad de alimentos orgánicos certificados.</p>
                     </div>
                   </div>
                   <div class="col-lg-12 d-flex align-items-start">
                     <span class="icon-dashboard mr-4 display-4"></span>
                     <div>
-                      <h4 class="m-0 h5 text-white">Healtier Soil</h4>
-                      <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
+                      <h4 class="m-0 h5 text-white">Suelo Más Saludable</h4>
+                      <p class="text-white opacity-50">Promovemos prácticas agrícolas sostenibles para un suelo más saludable y una producción continua de alimentos de alta calidad.</p>
                     </div>
                   </div>
 
