Chnged nav menu

--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
                     <li>
                       <a href="testimonials.html" class="nav-link text-left">Testimonios</a>
                     </li>
-                    <li><a href="blog.html" class="nav-link text-left">Blog</a></li>
                     <li>
                       <a href="contact.html" class="nav-link text-left">Contacto</a>
                     </li>
@@ -223,8 +222,8 @@
         <div class="container">
           <div class="row mb-5 justify-content-center text-center">
             <div class="col-lg-7">
-              <h3 class="section-subtitle">Services</h3>
-              <h2 class="section-title mb-4 text-black">Providing Fresh Produce Every Single Day</h2>
+              <h3 class="section-subtitle">Nuestros Servicios</h3>
+              <h2 class="section-title mb-4 text-black">Produciendo Productos Frescos Todos los Días</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -235,8 +234,8 @@
                   <img src="images/icon-1.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Planting</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Siembra</h3>
+                  <p>Planta eficientemente una variedad de cultivos para asegurar un crecimiento y rendimiento óptimos.</p>
                 </div>
               </div>
             </div>
@@ -247,8 +246,8 @@
                   <img src="images/icon-2.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Mulching</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Acolchado</h3>
+                  <p>Aplicamos mulch de alta calidad para retener la humedad y promover la salud general de las plantas.</p>
                 </div>
               </div>
             </div>
@@ -259,8 +258,8 @@
                   <img src="images/icon-3.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Plowing</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Arado</h3>
+                  <p>Nuestro equipo calificado utiliza equipos de última generación para arar el suelo a fondo.</p>
                 </div>
               </div>
             </div>
@@ -271,8 +270,8 @@
                   <img src="images/icon-4.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Mowing</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Segado</h3>
+                  <p>Manténemos paisajes ordenados y limpios con nuestros servicios profesionales de segado.</p>
                 </div>
               </div>
             </div>
@@ -284,8 +283,8 @@
                   <img src="images/icon-5.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Seeding</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Granar</h3>
+                  <p>Seleccionamos y sembramos cuidadosamente las semillas de más alta calidad para promover un crecimiento saludable.</p>
                 </div>
               </div>
             </div>
@@ -296,8 +295,8 @@
                   <img src="images/icon-6.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Fresh Vegetables</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Vegetales Frescos</h3>
+                  <p>Nos enorgullece ofrecer una selección diversa de productos nutritivos y frescos, recolectados en el punto máximo de frescura.</p>
                 </div>
               </div>
             </div>
@@ -308,8 +307,8 @@
                   <img src="images/icon-7.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Watering</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Riego</h3>
+                  <p>Implementamos sistemas de riego personalizados y horarios de riego para mantener niveles óptimos de humedad para tus cultivos.</p>
                 </div>
               </div>
             </div>
@@ -320,8 +319,8 @@
                   <img src="images/icon-8.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="service-1-content">
-                  <h3 class="service-heading">Vegetable selling</h3>
-                  <p>Gravida sodales condimentum pellen tesq accumsan orci quam sagittis sapie</p>
+                  <h3 class="service-heading">Venta de Vegetales</h3>
+                  <p>Disfruta la conveniencia de los vegetales y frutos frescos de la granja entregados directamente a tu negocio o desde nustro local.</p>
                 </div>
               </div>
             </div>
