--- a/testimonials.html
+++ b/testimonials.html
@@ -59,7 +59,7 @@
 
 
     
-    <div class="header-top bg-light">
+<div class="header-top bg-light">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-6 col-lg-3">
@@ -74,8 +74,8 @@
                 <span class="icon-room text-primary"></span>
               </div>
               <div class="text">
-                <span class="h4 d-block">San Francisco</span>
-                <span class="caption-text">Mountain View, Fake st., CA</span>
+                <span class="h4 d-block">Guayaquil</span>
+                <span class="caption-text">Durán, Guayas, Ecuador</span>
               </div>
             </div>
 
@@ -86,8 +86,8 @@
                 <span class="icon-phone text-primary"></span>
               </div>
               <div class="text">
-                <span class="h4 d-block">+1 2094 392 4312</span>
-                <span class="caption-text">Call us</span>
+                <span class="h4 d-block">+593969608089</span>
+                <span class="caption-text">Whatsapp</span>
               </div>
             </div>
           </div>
@@ -98,8 +98,8 @@
                 <span class="icon-envelope text-primary"></span>
               </div>
               <div class="text">
-                <span class="h4 d-block">info@gmail.com</span>
-                <span class="caption-text">Email us</span>
+                <span class="h4 d-block">ciudaddedios@gmail.com</span>
+                <span class="caption-text">Correo electrónico</span>
               </div>
             </div>
           </div>
@@ -133,8 +133,6 @@
                     <li class="active">
                       <a href="testimonials.html" class="nav-link text-left">Testimonios</a>
                     </li>
-                    <li><a href="blog.html" class="nav-link text-left">Blog</a></li>
-                    <li>
                       <a href="contact.html" class="nav-link text-left">Contacto</a>
                     </li>
                   </ul>                                                                                                                                                                                                                                                                                          
